[package]
name = "idle_snake"
version = "0.1.0"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"

[dependencies.bevy]
version = "0.4.0"
default-features = false
features = [
  "bevy_dynamic_plugin",
  "bevy_wgpu",
  "bevy_winit",
  "render",
  "png",
  "wayland",
]

[patch.crates-io]
bevy = {path = "../bevy"}
