[package]
name = "idle_snake"
version = "0.1.0"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
edition = "2018"

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_dynamic_plugin",
  "bevy/bevy_wgpu",
  "bevy/wayland",
]

web = [
  "bevy_webgl2"
]

[dependencies]
rand = "0.8.0"
bevy_webgl2 = {version = "0.4.0", optional = true}

[dependencies.bevy]
version = "0.4.0"
default-features = false

[patch.crates-io]
bevy = {path = "../bevy"}
